src/pagoda/snapshots/todaiji__pagoda__bytecode__tests__emits_binary_expression.snap
---
source: src/pagoda/bytecode.rs
expression: output
---
main:
  load.w %r0, $3  # span 2..3 "3"
  push.w %r0
  load.w %r0, $2  # span 0..1 "2"
  pop.w %r1
  add.w %r0, %r1  # span 0..3 "2+3"
  push.w %r0
  pop.w %r1
  movi %r0, $60
  trap
