src/pagoda/snapshots/todaiji__pagoda__bytecode__tests__emits_bitwise_ops.snap
---
source: src/pagoda/bytecode.rs
expression: output
---
  jmp main
main:
  load.w %r0, $1  # span 10..11 "1"
  push.w %r0
  load.w %r0, $3  # span 18..19 "3"
  push.w %r0
  load.w %r0, 8(%sp)  # span 13..19 "a&=3"
  pop.w %r1
  and.w %r0, %r1  # span 13..19 "a&=3"
  store.w %r0, 0(%sp)  # span 13..19 "a&=3"
  load.w %r0, $4  # span 31..32 "4"
  push.w %r0
  load.w %r0, 8(%sp)  # span 27..28 "a"
  pop.w %r1
  xor.w %r0, %r1  # span 26..33 "(a^4)"
  push.w %r0
  load.w %r0, 8(%sp)  # span 22..23 "a"
  not.w %r0  # span 21..23 "~a"
  pop.w %r1
  or.w %r0, %r1  # span 21..33 "~a|(a^4)"
  pop.w %r15
  push.w %r0
  pop.w %r1
  movi %r0, $60
  trap
