src/pagoda/snapshots/todaiji__pagoda__bytecode__tests__emits_comparisons.snap
---
source: src/pagoda/bytecode.rs
expression: output
---
  jmp main
main:
  load.w %r0, $4  # span 8..9 "4"
  push.w %r0
  load.w %r0, $3  # span 6..7 "3"
  pop.w %r1
  mul.w %r0, %r1  # span 6..9 "3*4"
  push.w %r0
  load.w %r0, $2  # span 3..4 "2"
  push.w %r0
  load.w %r0, $1  # span 1..2 "1"
  pop.w %r1
  add.w %r0, %r1  # span 1..4 "1+2"
  pop.w %r1
  cmplt.w %r1, %r0  # span 1..9 "1+2<=3*4"
  not.w %r1
  push.w %r1
  pop.w %r0
  push.w %r0
  pop.w %r1
  movi %r0, $60
  trap
