src/pagoda/snapshots/todaiji__pagoda__bytecode__tests__emits_exit_assembly.snap
---
source: src/pagoda/bytecode.rs
expression: output
---
  jmp main
main:
  load.w %r0, $7  # span 0..1 "7"
  push.w %r0
  pop.w %r1
  movi %r0, $60
  trap
