src/pagoda/snapshots/todaiji__pagoda__bytecode__tests__emits_function_call_with_args.snap
---
source: src/pagoda/bytecode.rs
expression: output
---
  movi %r0, $12
  xor.w %r1, %r1
  trap
  mov %r12, %r0
  jmp main
fn_add:
  push.w %r1
  push.w %r2
  load.w %r0, 0(%sp)  # span 29..30 "b"
  push.w %r0
  load.w %r0, 16(%sp)  # span 25..26 "a"
  pop.w %r1
  add.w %r0, %r1  # span 25..30 "a+b"
  pop.w %r7
  pop.w %r7
  jmp fn_add_ret
fn_add_ret:
  ret
main:
  load.w %r0, $2  # span 40..41 "2"
  push.w %r0
  pop.w %r1
  load.w %r0, $3  # span 42..43 "3"
  push.w %r0
  pop.w %r2
  call fn_add  # span 36..44 "add(2,3)"
  push.w %r0
  pop.w %r1
  movi %r0, $60
  trap
