src/pagoda/snapshots/todaiji__pagoda__bytecode__tests__emits_function_call_with_stack_args.snap
---
source: src/pagoda/bytecode.rs
expression: output
---
  movi %r0, $12
  xor.w %r1, %r1
  trap
  mov %r12, %r0
  jmp main
fn_sum:
  load.w %r0, 0(%sp)  # load stack arg j
  push.w %r0
  load.w %r0, 8(%sp)  # load stack arg i
  push.w %r0
  push.w %r1
  push.w %r2
  push.w %r3
  push.w %r4
  push.w %r5
  push.w %r6
  push.w %r7
  push.w %r8
  load.w %r0, 72(%sp)  # span 107..108 "j"
  push.w %r0
  load.w %r0, 72(%sp)  # span 105..106 "i"
  push.w %r0
  load.w %r0, 16(%sp)  # span 103..104 "h"
  push.w %r0
  load.w %r0, 32(%sp)  # span 101..102 "g"
  push.w %r0
  load.w %r0, 48(%sp)  # span 99..100 "f"
  push.w %r0
  load.w %r0, 64(%sp)  # span 97..98 "e"
  push.w %r0
  load.w %r0, 80(%sp)  # span 95..96 "d"
  push.w %r0
  load.w %r0, 96(%sp)  # span 93..94 "c"
  push.w %r0
  load.w %r0, 112(%sp)  # span 91..92 "b"
  push.w %r0
  load.w %r0, 128(%sp)  # span 89..90 "a"
  pop.w %r1
  add.w %r0, %r1  # span 89..92 "a+b"
  pop.w %r1
  add.w %r0, %r1  # span 89..94 "a+b+c"
  pop.w %r1
  add.w %r0, %r1  # span 89..96 "a+b+c+d"
  pop.w %r1
  add.w %r0, %r1  # span 89..98 "a+b+c+d+e"
  pop.w %r1
  add.w %r0, %r1  # span 89..100 "a+b+c+d+e+f"
  pop.w %r1
  add.w %r0, %r1  # span 89..102 "a+b+c+d+e+f+g"
  pop.w %r1
  add.w %r0, %r1  # span 89..104 "a+b+c+d+e+f+g+h"
  pop.w %r1
  add.w %r0, %r1  # span 89..106 "a+b+c+d+e+f+g+h+i"
  pop.w %r1
  add.w %r0, %r1  # span 89..108 "a+b+c+d+e+f+g+h+i+j"
  load.w %r7, $80
  add.w %sp, %r7
  jmp fn_sum_ret
fn_sum_ret:
  ret
main:
  load.w %r0, $1  # span 118..119 "1"
  push.w %r0
  pop.w %r1
  load.w %r0, $2  # span 120..121 "2"
  push.w %r0
  pop.w %r2
  load.w %r0, $3  # span 122..123 "3"
  push.w %r0
  pop.w %r3
  load.w %r0, $4  # span 124..125 "4"
  push.w %r0
  pop.w %r4
  load.w %r0, $5  # span 126..127 "5"
  push.w %r0
  pop.w %r5
  load.w %r0, $6  # span 128..129 "6"
  push.w %r0
  pop.w %r6
  load.w %r0, $7  # span 130..131 "7"
  push.w %r0
  pop.w %r7
  load.w %r0, $8  # span 132..133 "8"
  push.w %r0
  pop.w %r8
  load.w %r0, $9  # span 134..135 "9"
  push.w %r0
  load.w %r0, $10  # span 136..138 "10"
  push.w %r0
  call fn_sum  # span 114..139 "sum(1,2,3,4,5,6,7,8,9,10)"
  pop.w %r7
  pop.w %r7
  push.w %r0
  pop.w %r1
  movi %r0, $60
  trap
