src/pagoda/snapshots/todaiji__pagoda__bytecode__tests__emits_if_else.snap
---
source: src/pagoda/bytecode.rs
expression: output
---
  jmp main
main:
  load.w %r0, $1  # span 6..7 "1"
  brz.w %r0, label_4
  load.w %r0, $2  # span 11..12 "2"
  jmp label_5
label_4:
  load.w %r0, $3  # span 22..23 "3"
label_5:
  push.w %r0
  pop.w %r1
  movi %r0, $60
  trap
