src/pagoda/snapshots/todaiji__pagoda__bytecode__tests__emits_if_elseif_else.snap
---
source: src/pagoda/bytecode.rs
expression: output
---
  movi %r0, $12
  xor.w %r1, %r1
  trap
  mov %r12, %r0
  jmp main
main:
  load.w %r0, $1  # span 6..7 "1"
  brz.w %r0, label_0
  load.w %r0, $2  # span 11..12 "2"
  jmp label_1
label_0:
  load.w %r0, $0  # span 24..25 "0"
  brz.w %r0, label_2
  load.w %r0, $3  # span 29..30 "3"
  jmp label_3
label_2:
  load.w %r0, $4  # span 40..41 "4"
label_3:
label_1:
  push.w %r0
  pop.w %r1
  movi %r0, $60
  trap
